# skills-catalog

./: .gitignore  README.md  requirements.txt
catalog/: config.py  git_source.py  indexer.py  main.py  models.py  search.py  store.py  watcher.py
catalog/routers/: health.py  items.py  tags.py  webhook.py
cli/: LICENSE  README.md  pyproject.toml
cli/src/skillsctl/: __init__.py  __main__.py  client.py  lockfile.py  main.py
cli/src/skillsctl/commands/: config.py  install.py  list_cmd.py  remove.py  search.py  sync.py  update.py
cli/tests/: conftest.py  test_config.py  test_install.py  test_lockfile.py  test_sync_update_remove.py
content/agents/: onboarding-agent.md  slack-ops-agent.md
content/rules/: no-direct-production-deploy.md
content/skills/: http-request.md  send-email.md  send-slack-notification.md
content/workflows/: onboard-new-employee.md
static/: style.css
templates/: base.html  index.html  item.html
